# Project-Shell

./: .gitignore  README.md
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  ast.c  ast.h
src/builtin/: Makefile.am  builtin.c  builtin.h  cd.c  dot.c  echo.c  false.c  true.c
src/eval/: Makefile.am  eval.c  eval.h
src/lexer/: Makefile.am  lexer.c  lexer.h  token.h
src/parser/: Makefile.am  parser.c  parser.h
tests/: step1.c  test.sh
tests/scripts/: script10.sh  script11.sh  script12.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh  script8.sh  script9.sh
tests/test_files/: double1.sh  double2.sh  double3.sh  double4.sh  escape1.sh  escape10.sh  escape11.sh  escape12.sh  escape13.sh  escape14.sh  escape15.sh  escape16.sh  escape17.sh  escape18.sh  escape19.sh  escape2.sh  escape3.sh  escape4.sh  escape5.sh  escape6.sh  escape7.sh  escape8.sh  escape9.sh  for1.sh  for2.sh  for3.sh  for4.sh  for5.sh  for6.sh  step2_1.sh  step2_2.sh  teste_multiple.sh  variables1.sh  variables2.sh  while1.sh
